Patch: print-pre-wrap Type: bugfix
Use white-space: pre-wrap in printable styles, like on screen

--- a/resources/src/mediawiki.legacy/commonPrint.css
+++ b/resources/src/mediawiki.legacy/commonPrint.css
@@ -81,7 +81,7 @@ p {
 
 pre, .mw-code {
 	border: 1pt dashed black;
-	white-space: pre;
+	white-space: pre-wrap;
 	font-size: 8pt;
 	overflow: auto;
 	padding: 1em 0;
